navbar and logo added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
        <div id="logo">
            <img id="logoPhoto" src="logo.png" alt="logo">
        </div>
-
        <div id="headText1">
            <h1>
                Got hired or hiring?
@@ -22,12 +21,28 @@
                 <h1>
                     Estimate the pay now!
                 </h1>
-           </div>
-           
-           
+           </div>  
        </div>
-
-
+       <div id="navBar">
+           <div class="navBar">
+                <a href="index.html">Home</a>
+           </div>
+           <div class="linkNav">
+                <a href="index.html">Employer</a>
+           </div>
+           <div class="linkNav">
+                <a href="index.html">Employee</a>
+           </div>
+           <div class="LinkNav">
+                <a href="index.html">Taxes</a>
+           </div>
+           <div class="linkNav">
+                <a href="index.html">Wages</a>
+           </div>
+           <div class="linkNav">
+                <a href="index.html">Contact</a>
+           </div>  
+       </div>
     </header>
 
    
