html and css completed

--- a/index.html
+++ b/index.html
@@ -44,6 +44,84 @@
            </div>  
        </div>
     </header>
+    <br><br><br>
+    <div>
+        <div>
+            <h3>
+                &#x2659; Employee pay Estimator (California):
+            </h3>
+        </div>
+        <br><br>
+        <div id="estimator1">
+            <table>
+                <tr>
+                <th id="hourlyPay">Hourly pay</th>
+                <th id="allowance">Allowance</th>
+                <th id="totalHours">Total hours</th>
+                <th id="bonus">Bonuses</th>
+                </tr>
+                <tr>
+                    <td>                         
+                        <input type="number">  
+                    </td>
+                    <td>
+                        <input type="number">
+                    </td>
+                    <td>
+                        <input type="number">
+                    </td>
+                    <td>
+                        <input type="number">
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <h3>Your estimated pay is:</h3>
+            <p id="result1"></p>
+        </div>
+    </div>
+    <br>
+    <hr id="lines">
+    <br>
+    <br>
+    <div>
+        <h3>
+            &#x2659; Employee pay Estimator (California):
+        </h3>
+    </div>
+
+    <table>
+        <tr>
+        <th id="hourlyPay">Hourly pay</th>
+        <th id="employees">Employees #</th>
+        <th id="allowance">Allowance</th>
+        <th id="totalHours">Total hours</th>
+        <th id="bonus">Bonuses</th>
+        </tr>
+        <tr>
+            <td>                         
+                <input type="number">  
+            </td>
+            <td>
+                <input type="number">
+            </td>
+            <td>
+                <input type="number">
+            </td>
+            <td>
+                <input type="number">
+            </td>
+            <td>
+                <input type="number">
+            </td>
+        </tr>
+    </table>
+</div>
+<div>
+    <h3>The estimated pay is:</h3>
+    <p id="result2"></p>
+</div>
 
    
    
