changes on HTML and JS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pay Estimator</title>
     <meta name="description" content="pay, salary, taxes">
     <link rel="stylesheet" href="main.css">
-    <script src="program.js"></script>
+    <!--<script src="program.js"></script>-->
     
 </head>
 <body>
@@ -54,7 +54,7 @@
         </div>
         <br><br>
         <div id="estimator1">
-    <form>
+    <form id="myForm">
             <table>
                 <tr>
                 <th>Hourly pay</th>
@@ -81,7 +81,7 @@
         </div>
         <br>
         <div>
-            <button type="submit" id="calculate1" onclick="grossPay()">Calculate</button>
+            <button id="calculate1">Calculate</button>
         </div>
        </form>
         <div>
