--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="header">
         <div>
-            <img class="logoPhoto" src="logo.png" alt="logo">
+            <img class="logoPhoto" src="https://i.postimg.cc/vB6H3DDM/logo.png" alt="logo">
         </div>
 
         <div class="head-text">
