--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Pay Estimator</title>
     <meta name="description" content="pay, salary, taxes">
-    <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao|Pacifico|Raleway|Source+Sans+Pro&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao|Pacifico|Raleway|Source+Sans+Pro&display=swap"rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script>
-
 </head>
 
 <body>
